2014-10-08  Eli Zaretskii  <eliz@gnu.org>

	* frames.texi (Multiple Terminals): Improve the description of X
	display names.  Add index entries.
	(Basic Parameters): Add a cross-reference to where X display names
	are described.
	(Position Parameters): Mention that positional parameters of the
	form (+ POS) can be negative if they are on a non-primary monitor
	of a multi-monitor display.  (Bug#18636)
	(Creating Frames): Mention that on multi-monitor displays the
	frame might be positioned differently than specified by the frame
	parameters alist.

2014-10-04  Glenn Morris  <rgm@gnu.org>

	* commands.texi (Generic Commands): Copyedits.

	* display.texi (Scroll Bars):
	* modes.texi (Header Lines): Copyedits.

	* buffers.texi (Buffer List):
	* display.texi (Image Descriptors, Defining Images):
	* functions.texi (Core Advising Primitives): Small fixes re @var usage.

	* windows.texi (Window Sizes, Resizing Windows): Copyedits.

	* frames.texi (Multiple Terminals): Copyedits re multiple monitors.

2014-10-03  Martin Rudalics  <rudalics@gmx.at>

	* frames.texi (Size Parameters, Size and Position): Mention that
	with some window managers you have to set
	`frame-resize-pixelwise' in order make a frame truly fullscreen
	or maximized.

2014-09-04  Stefan Monnier  <monnier@iro.umontreal.ca>

	* functions.texi (Core Advising Primitives): Add a note about the
	confusing treatment of `interactive' for :filter-args (bug#18399).

2014-08-19  Eli Zaretskii  <eliz@gnu.org>

	* display.texi (Bidirectional Display): Update the Emacs's class
	of bidirectional conformance.

2014-07-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* debugging.texi (Function Debugging, Debugger Commands):
	Update debug-on-entry w.r.t behavior after redefinitions (bug#17902).

2014-06-29  Glenn Morris  <rgm@gnu.org>

	* help.texi (Help Functions): "Online" help doesn't mean what it
	used to any more.

2014-06-26  Glenn Morris  <rgm@gnu.org>

	* minibuf.texi (Intro to Minibuffers): Batch mode is basic.