@@ -3264,7 +3264,7 @@
 	* w32term.c (x_make_frame_visible): Use SystemParametersInfo with
 	SPI_GETWORKAREA to find the dimensions of the screen work area,
 	and adjust vertical position of the frame in order to avoid being
-	covered by the task bar.
+	covered by the taskbar.
 
 	* w32fns.c (w32_createwindow): Use CW_USEDEFAULT instead of
 	f->left_pos and SH_SHOW instead of f->top_pos in the call to
